<resources>
    <string name="app_name">Idris Aminu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_a_new_patient">Add A New Patient</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="current_username">Current Username</string>
    <string name="settings">Settings</string>
    <string name="current_number_of_added_patient">Current number of added patient</string>
    <string name="maximum_number_of_patient_allowed">Maximum number of patient allowed</string>
    <string name="save">Save</string>
</resources>